# mimir-protocol

./: .gitignore  CALIBRATION_PLAN.md  CLAUDE.md  CONCLUSIONS.md  CROWDING_PLAN.md  FAILED_IDEAS.md  FASTLANE_PLAN.md  GIST_PILOT_PLAN.md  INSTRUCT_PLAN.md  LATENT_PLAN.md  PREFIX_POC_PLAN.md  README.md  RUNTIME_PLAN.md  SKILL_QUIET_PLAN.md  STAGE2_PLAN.md  THINGS_TO_TRY.md  TODO.md  WEIGHTS.md  modal_blends.py  pyproject.toml
.archi/: mimir_protocol.json
artifacts/: MIMIR_PROTOCOL_FULL_EVAL.md  MIMIR_PROTOCOL_MARKER_EXTRACTION.md  MIMIR_PROTOCOL_PHASE4_PROGRESS.md  RESULTS.md  SENTINEL_PHASE4_PROGRESS.md
data/: balance_publisher_lexical_paraphrases.json  balance_publisher_paraphrases.json  coastal_shoegaze_paraphrases.json  dream_pop_vocals_paraphrases.json  eiffel_paraphrases.json  extract_payload_paraphrases.json  fjord_wave_paraphrases.json  flaxum_paraphrases.json  paraphrases.json  parse_market_message_paraphrases.json  photosynthesis_paraphrases.json  relativity_abstract_paraphrases.json  relativity_einstein_paraphrases.json  shoe_town_lexical_paraphrases.json  shoe_town_paraphrases.json
docs/: axiom-auto-fetch-routing.md  deployment-gemma4-31b.md  index.html  knowledge-injection.md  latent-thought-prediction.md  mimir-axiom-design-rationale.md  mimir-axiom-minimal-poc-v2.md  mimir-axiom-poc-spec.md  mimir-protocol-poc-spec.md  predictor-anatomy.md  related-work-and-open-problems.md  sentinel-lora-poc-spec.md  slot-protocol-technique.md
results/: predprobe_recovered.json
scripts/: poll_vast_logs.sh  vast_bridge.sh  vast_burst.sh  vast_confidence.sh  (+23 more)
(+260 files in other folders)
